--- a/index.html
+++ b/index.html
@@ -162,29 +162,27 @@
         <div class="container justify-content-between">
             <div class="">
 
-                <form class="w-75 w-sm-100 m-auto">
+                <div class="w-75 w-sm-100 m-auto">
                     <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
 
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Počet lidí v domáctnosti</label>
-                                <input type="number" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
-                                <div id="emailHelp" class="form-text">Tyto data se nikam neukládají</div>
+                                <label for="solar_pocet_lidi" class="form-label">Počet lidí v domáctnosti</label>
+                                <input type="number" class="form-control" id="solar_pocet_lidi">
+                                <div class="form-text">Tyto data se nikam neukládají</div>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Odhadovaná roční spotřeba:</label>
-                                <input type="number" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                <label for="solar_spotreba" class="form-label">Odhadovaná roční spotřeba:</label>
+                                <input type="number" class="form-control" id="solar_spotreba">
                             </div>
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Střecha</label>
-                        <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                        <label for="strecha_select" class="form-label">Střecha</label>
+                        <select class="form-select" aria-label="Vyberte typ střechy" id="strecha_select">
                             <option value="1">Sedlová</option>
                             <option value="2">Pultová</option>
                             <option value="3">Válbová</option>
@@ -194,8 +192,8 @@
                     <div class="row w-100">
                         <div class="col">
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Priority</label>
-                                <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                                <label for="priorita" class="form-label">Priority</label>
+                                <select class="form-select" aria-label="Vyberte typ střechy" id="priorita">
                                     <option value="1">Nizká cena</option>
                                     <option value="2">Doručení</option>
                                     <option value="3">Recenze</option>
@@ -205,8 +203,8 @@
                         </div>
                         <div class="col-sm">
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Cíl</label>
-                                <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                                <label for="solar_cil" class="form-label">Cíl</label>
+                                <select class="form-select" aria-label="Vyberte typ střechy" id="solar_cil">
                                     <option value="1">Nezávislost</option>
                                     <option value="2">Ekonomická výhoda</option>
                                 </select>
@@ -214,91 +212,90 @@
                         </div>
                     </div>
                     <div class="row">
-                        <label for="exampleInputPassword1" class="form-label my-3">Vaše spotřeba</label>
+                        <label class="form-label my-3">Vaše spotřeba</label>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Elektrický boiler</label>
+                                <input type="checkbox" class="form-check-input" id="solar_boiler">
+                                <label class="form-check-label" for="solar_boiler">Elektrický boiler</label>
                             </div>
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck2">
-                                <label class="form-check-label" for="exampleCheck2">Zateplený dům</label>
+                                <input type="checkbox" class="form-check-input" id="solar_zatepleny_dum">
+                                <label class="form-check-label" for="solar_zatepleny_dum">Zateplený dům</label>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck3">
-                                <label class="form-check-label" for="exampleCheck3">Elektrické topenít</label>
+                                <input type="checkbox" class="form-check-input" id="solar_elektricke_topeni">
+                                <label class="form-check-label" for="solar_elektricke_topeni">Elektrické topenít</label>
                             </div>
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck4">
-                                <label class="form-check-label" for="exampleCheck4">Elektrické auto</label>
+                                <input type="checkbox" class="form-check-input" id="solar_elektricka_auta">
+                                <label class="form-check-label" for="solar_elektricka_auta">Elektrické auto</label>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck5">
-                                <label class="form-check-label" for="exampleCheck5">Bazén</label>
+                                <input type="checkbox" class="form-check-input" id="solar_bazen">
+                                <label class="form-check-label" for="solar_bazen">Bazén</label>
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Vypočítat cenu elektrárny</button>
-                    <p class="m-3">Vaše solární instalace bude stát x Kč</p>
-                </form>
+                    <button onclick="solarForm();" class="btn btn-primary">Vypočítat cenu elektrárny</button>
+                    <p class="m-3" id="solar_cena_output">Vaše solární instalace bude stát x Kč</p>
+                </div>
             </div>
             <div class="mt-5 w-75 w-sm-100 pt-5 m-auto">
                 <h2 class="section-heading text-uppercase">Tepelný kalkulátor</h2>
 
-                <form>
+                <div>
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Počet lidí</label>
-                                <input type="number" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                <label for="teplo_pocet_lidi" class="form-label">Počet lidí</label>
+                                <input type="number" class="form-control" id="teplo_pocet_lidi">
                             </div>
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Druh stavby</label>
-                        <select class="form-select" aria-label="Vyberte druh stavby">
+                        <label for="teplo_druh_stavby" class="form-label">Druh stavby</label>
+                        <select class="form-select" id="teplo_druh_stavby" aria-label="Vyberte druh stavby">
                             <option value="1">Kamenná</option>
                             <option value="2">Cihlová</option>
                             <option value="3">Zděná</option>
                         </select>
                     </div>
                     <div class="row">
-                        <label for="exampleInputPassword1" class="form-label my-3">Vaše spotřeba</label>
+                        <label class="form-label my-3">Vaše spotřeba</label>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Ohřev vody</label>
+                                <input type="checkbox" class="form-check-input" id="teplo_ohrev_vody">
+                                <label class="form-check-label" for="teplo_ohrev_vody">Ohřev vody</label>
                             </div>
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck2">
-                                <label class="form-check-label" for="exampleCheck2">Vytápění</label>
+                                <input type="checkbox" class="form-check-input" id="teplo_vytapeni">
+                                <label class="form-check-label" for="teplo_vytapeni">Vytápění</label>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck3">
-                                <label class="form-check-label" for="exampleCheck3">Výhřev bazénu</label>
+                                <input type="checkbox" class="form-check-input" id="teplo_vyhrev">
+                                <label class="form-check-label" for="teplo_vyhrev">Výhřev bazénu</label>
                             </div>
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck4">
-                                <label class="form-check-label" for="exampleCheck4">Podlahová vytápění</label>
+                                <input type="checkbox" class="form-check-input" id="teplo_podlaha">
+                                <label class="form-check-label" for="teplo_podlaha">Podlahová vytápění</label>
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck5">
-                                <label class="form-check-label" for="exampleCheck5">Normální radiátor</label>
+                                <input type="checkbox" class="form-check-input" id="teplo_radiator">
+                                <label class="form-check-label" for="teplo_radiator">Normální radiátor</label>
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Vypočítat cenu</button>
-                    <p class="m-3">Vaše tepelná instalace bude stát x Kč</p>
-                </form>
+                    <button onclick="teploForm();" id="teplo_button" class="btn btn-primary">Vypočítat cenu</button>
+                    <p class="m-3" id="teplo_cena_output">Vaše tepelná instalace bude stát x Kč</p>
+                </div>
 
 
 
@@ -397,15 +394,24 @@
                     </div>
 
                     <div class="dropdown">
-                        <input class="dropdown-toggle p-3 input1 wrap-input1 validate-input"
-                            id="subject_input" data-bs-toggle="dropdown" aria-expanded="false" placeholder="    Týká se služby?" name="subject">
+                        <input class="dropdown-toggle p-3 input1 wrap-input1 validate-input" id="subject_input"
+                            data-bs-toggle="dropdown" aria-expanded="false" placeholder="    Týká se služby?"
+                            name="subject">
                         <span class="shadow-input1"></span>
 
                         <ul class="dropdown-menu w-100" aria-labelledby="subject_input">
-                            <li class="dropdown-item" onclick="document.getElementById('subject_input').value = 'Instalatéřství';">Instalatéřství</li>
-                            <li class="dropdown-item" onclick="document.getElementById('subject_input').value = 'Fotovoltaické instalace';">Fotovoltaické instalace</li>
-                            <li class="dropdown-item" onclick="document.getElementById('subject_input').value = 'Elektroinstalace';">Elektroinstalace</li>
-                            <li class="dropdown-item" onclick="document.getElementById('subject_input').value = 'Horolezectví a zimní kurzy';">Horolezectví a zimní kurzy</li>
+                            <li class="dropdown-item"
+                                onclick="document.getElementById('subject_input').value = 'Instalatéřství';">
+                                Instalatéřství</li>
+                            <li class="dropdown-item"
+                                onclick="document.getElementById('subject_input').value = 'Fotovoltaické instalace';">
+                                Fotovoltaické instalace</li>
+                            <li class="dropdown-item"
+                                onclick="document.getElementById('subject_input').value = 'Elektroinstalace';">
+                                Elektroinstalace</li>
+                            <li class="dropdown-item"
+                                onclick="document.getElementById('subject_input').value = 'Horolezectví a zimní kurzy';">
+                                Horolezectví a zimní kurzy</li>
                         </ul>
                     </div>
 
@@ -749,6 +755,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/calculator.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     <script src="https://kwesforms.com/v2/kwes-script.js" defer></script>
 </body>
