--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="text-center">
                 Naše firma vznikla s vizí poskytovat
-                komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatéřství, dřevo
+                komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatérství, dřevo
                 výrobu, solární technologie, horolezectví a zimní sporty.
                 Naše úsilí spočívá v dosažení optimálních výsledků pro naše klienty. S Vámi spolupracujeme od prvního
                 nápadu až po dokončení projektu, abychom zajistili, že každý aspekt splňuje Vaše očekávání. S
@@ -102,7 +102,7 @@
                             <img class="img-fluid" src="./img/instalaterstvi/instalaterstvi13.JPG" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Instalatéřství</div>
+                            <div class="portfolio-caption-heading">Instalatérství</div>
                             <div class="portfolio-caption-subheading text-muted">Kvalita na prvním místě</div>
                         </div>
                     </div>
