--- a/index.html
+++ b/index.html
@@ -138,21 +138,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-4 mb-sm-0">
-                    <!-- Portfolio item 4-->
-                    <div class="portfolio-item">
-                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                            <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="./img/sporty/sporty01.JPG" alt="..." />
-                        </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Horolezectví a zimní kurzy</div>
-                            <div class="portfolio-caption-subheading text-muted">Sportovat ale bezpečně</div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -226,7 +211,7 @@
                         <div class="col-sm">
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="solar_elektricke_topeni">
-                                <label class="form-check-label" for="solar_elektricke_topeni">Elektrické topenít</label>
+                                <label class="form-check-label" for="solar_elektricke_topeni">Elektrické topení</label>
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="solar_elektricka_auta">
@@ -503,12 +488,12 @@
                                             můžete spolehnout.</p>
                                         <ul class="list-inline">
                                             <li>
-                                                <strong>Začal jsem poskytovat:</strong>
-                                                25.12.2028
+                                                <strong>Začali jsme poskytovat:</strong>
+                                                1.3.2023
                                             </li>
                                             <li>
-                                                <strong>Ukončených projektů:</strong>
-                                                přes 29
+                                                <strong>Ukončených instalací:</strong>
+                                                přes 40
                                             </li>
                                         </ul>
                                         <button class="btn btn-success btn-xl text-uppercase" data-bs-dismiss="modal"
@@ -555,9 +540,7 @@
                                         </div>
 
                                         <div class="col-lg-4 mb-4 mb-lg-0">
-                                            <img src="./img/fotovoltaika/fotovoltaika41.JPG"
-                                                class="w-100 shadow-1-strong rounded mb-4"
-                                                alt="Mountains in the Clouds" />
+          
 
                                             <img src="./img/fotovoltaika/fotovoltaika68.png"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
@@ -582,12 +565,12 @@
                                             pomohli snížit náklady a přispět k ochraně životního prostředí.</p>
                                         <ul class="list-inline">
                                             <li>
-                                                <strong>Začal jsem poskytovat:</strong>
-                                                12.5.2028
+                                                <strong>Začali jsme poskytovat:</strong>
+                                                1.2.2023
                                             </li>
                                             <li>
                                                 <strong>Ukončených projektů:</strong>
-                                                přes 98
+                                                přes 200
                                             </li>
                                         </ul>
                                         <button class="btn btn-success btn-xl text-uppercase" data-bs-dismiss="modal"
@@ -619,8 +602,8 @@
                         <div class="col h-100">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase text-center">Dřevo výroba</h2>
-                                <p class="item-intro text-muted text-center">Dřevěné výrobký na míru</p>
+                                <h2 class="text-uppercase text-center">Elektroinstalace</h2>
+                                <p class="item-intro text-muted text-center">Výroba lustrů na míru</p>
                                 <!-- Gallery -->
                                 <div class="row">
                                     <div class="col-lg-6 m-0 m-sm-2 row">
@@ -641,13 +624,11 @@
                                         </div>
                                     </div>
                                     <div class="col text-left">
-                                        <p>Naše vášeň pro dřevo a kvalitní řemeslo se odráží v každém našem produktu.
-                                            Vyrábíme kvalitní nábytek, dřevěné konstrukce a další výrobky na míru. Vaše
-                                            přání a potřeby jsou naší prioritou.</p>
+                                        <p></p>
                                         <ul class="list-inline">
                                             <li>
-                                                <strong>Začal jsem poskytovat:</strong>
-                                                12.2.2025
+                                                <strong>Začali jsme poskytovat:</strong>
+                                                1.3.2023
                                             </li>
                                             <li>
                                                 <strong>Ukončených projektů:</strong>
@@ -672,84 +653,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Portfolio item 4 modal popup-->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg"
-                        alt="Close modal" /></div>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col">
-                            <div class="modal-body">
-                                <!-- Project details-->
-                                <h2 class="text-uppercase text-center">Horolezectví a zimní kurzy</h2>
-                                <p class="item-intro text-muted text-center">Sportovat ale bezpečně</p>
-                                <!-- Gallery -->
-                                <div class="row">
-                                    <div class="col-lg-6 m-0 m-sm-2 row">
-                                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                                            <img src="./img/sporty/sporty02.jpg"
-                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
-
-                                            <img src="./img/sporty/sporty08.png"
-                                                class="w-100 shadow-1-strong rounded mb-4"
-                                                alt="Wintry Mountain Landscape" />
-                                        </div>
-
-                                        <div class="col-lg-4 mb-4 mb-lg-0">
-                                            <img src="./img/sporty/sporty12.png"
-                                                class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
-
-                                            <img src="./img/sporty/sporty03.JPG"
-                                                class="w-100 shadow-1-strong rounded mb-4"
-                                                alt="Yosemite National Park" />
-
-                                        </div>
-
-                                        <div class="col-lg-4 mb-4 mb-lg-0">
-                                            <img src="./img/sporty/sporty01.JPG"
-                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
-                                            <img src="./img/sporty/sporty04.JPG"
-                                                class="w-100 shadow-1-strong rounded mb-4"
-                                                alt="Mountains in the Clouds" />
-
-                                        </div>
-                                    </div>
-                                    <div class="col text-left">
-                                        <p>Umožněte nám přivést vás do světa zimních radovánek a horolezectví. Nabízíme
-                                            školení pro snowboarding, lyžování a horolezectví pro všechny úrovně
-                                            dovedností. Bezpečnost a zábava jsou naší prioritou.</p>
-                                        <ul class="list-inline">
-                                            <li>
-                                                <strong>Začal jsem poskytovat:</strong>
-                                                26.6.2025
-                                            </li>
-                                            <li>
-                                                <strong>Ukončených projektů:</strong>
-                                                přes 27
-                                            </li>
-                                        </ul>
-                                        <button class="btn btn-success btn-xl text-uppercase" data-bs-dismiss="modal"
-                                            type="button">
-                                            Objednat
-                                        </button>
-                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
-                                            type="button">
-                                            <i class="fas fa-xmark me-1"></i>
-                                            Zavřít
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 
     <!-- Bootstrap core JS-->
