--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-xl navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">Adamss Bros. Grouping s.r.o.</a>
+            <a class="navbar-brand" href="#page-top">
+                <img src="./img/ostatni/logo_white.png" alt="Logo"
+                    style="width: 50x; height: 50px; margin-top: -5px; margin-right: -12px;">
+                Adamss Bros. Grouping s.r.o.
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -65,13 +69,13 @@
             </div>
             <div class="text-center">
                 Naše firma vznikla s vizí poskytovat
-                komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatérství, dřevo
-                výrobu, solární technologie, horolezectví a zimní sporty.
+                komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatérství, solární
+                technologie a elektroinstalace
                 Naše úsilí spočívá v dosažení optimálních výsledků pro naše klienty. S Vámi spolupracujeme od prvního
                 nápadu až po dokončení projektu, abychom zajistili, že každý aspekt splňuje Vaše očekávání. S
-                Adamssbrosgrouping je kvalita zaručena.
-                Vyberte (si) nás a začněte cestu k skvělým a individualizovaným řešením ve světě instalatérství, dřevo
-                výroby, solárních technologií, horolezectví a zimních sportů.
+                Adamss Bros Grouping je kvalita zaručena.
+                Vyberte (si) nás a začněte cestu k skvělým a individualizovaným řešením ve světě instalatérství,
+                solárních technologií a elektroinstalací.
             </div>
             <div class="row my-5 text-center">
                 <div class="col-sm-6 mb-4">
@@ -91,9 +95,11 @@
                 <h2 class="section-heading text-uppercase">Jaké služby poskytuji?</h2>
                 <h3 class="section-subheading text-muted">Pro více informací rozklikněte službu.</h3>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-6 mb-4">
-                    <!-- Portfolio item 1-->
+        </div>
+        <div class="row d-flex">
+            <div class="row col-lg-6 d-flex flex-column ">
+                <div class="col-lg mb-4">
+                    <!-- Portfolio item 2-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
@@ -107,22 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-4">
-                    <!-- Portfolio item 2-->
-                    <div class="portfolio-item">
-                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                            <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="./img/fotovoltaika/fotovoltaika101.jpg" alt="..." />
-                        </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Fotovoltaické instalace</div>
-                            <div class="portfolio-caption-subheading text-muted">Ušetřete za předraženou energii</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-4 mb-lg-0">
+                <div class="col-lg mb-4 mb-lg-0">
                     <!-- Portfolio item 3-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
@@ -135,6 +126,23 @@
                             <div class="portfolio-caption-heading">Elektroinstalace</div>
                             <div class="portfolio-caption-subheading text-muted">Přípojíme vše, co budete potřebovat
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row col-lg-6 d-flex">
+                <div class="col-lg mb-4">
+                    <!-- Portfolio item 1-->
+                    <div class="portfolio-item solar">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img src="./img/fotovoltaika/fotovoltaika102.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Fotovoltaické instalace</div>
+                            <div class="portfolio-caption-subheading text-muted">Ušetřete za předraženou energii</div>
                         </div>
                     </div>
                 </div>
@@ -299,7 +307,9 @@
                 <div class="team-member mx-3">
                     <img class="mx-auto rounded-circle" src="./img/ostatni/logo_no_bg.png" alt="..." />
                     <h4>Václav Adámek</h4>
-                    <p class="text-muted"><a href="mailto:vaclav.adamek@adamssbros.cz">vaclav.adamek@adamssbros.cz</a>
+                    <p class="text-muted m-0"><a
+                            href="mailto:vaclav.adamek@adamssbros.cz">vaclav.adamek@adamssbros.cz</a>
+                    <p class="text-muted mb-3"><a href="tel:703340508">606 615 757</a>
                     </p>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/adamssbrosgrouping/"
                         target="_blank" aria-label="Václav Adámek Instagramový profil">
@@ -540,7 +550,7 @@
                                         </div>
 
                                         <div class="col-lg-4 mb-4 mb-lg-0">
-          
+
 
                                             <img src="./img/fotovoltaika/fotovoltaika68.png"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
