--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row d-flex">
             <div class="row col-lg-6 d-flex flex-column ">
-                <div class="col-lg mb-4">
+                <div class="col-lg mb-4 d-flex justify-content-end">
                     <!-- Portfolio item 2-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
@@ -113,14 +113,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg mb-4 mb-lg-0">
+                <div class="col-lg mb-4 mb-lg-0 d-flex justify-content-end">
                     <!-- Portfolio item 3-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="./img/drevovyroba/drevovyroba20.png" alt="..." />
+                            <img class="img-fluid" src="./img/elektroinstalace/0.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Elektroinstalace</div>
@@ -295,6 +295,9 @@
             </div>
         </div>
     </section>
+
+    <!-- Container element -->
+    <div class="parallax"></div>
 
     <!-- Team-->
     <section class="page-section bg-light" id="team">
@@ -550,7 +553,8 @@
                                         </div>
 
                                         <div class="col-lg-4 mb-4 mb-lg-0">
-
+                                            <img src="./img/fotovoltaika/fotovoltaika101.jpg"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
 
                                             <img src="./img/fotovoltaika/fotovoltaika68.png"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
@@ -613,28 +617,35 @@
                             <div class="modal-body">
                                 <!-- Project details-->
                                 <h2 class="text-uppercase text-center">Elektroinstalace</h2>
-                                <p class="item-intro text-muted text-center">Výroba lustrů na míru</p>
+                                <p class="item-intro text-muted text-center">Přípojíme vše, co budete potřebovat</p>
                                 <!-- Gallery -->
                                 <div class="row">
                                     <div class="col-lg-6 m-0 m-sm-2 row">
                                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                                            <img src="./img/drevovyroba/drevovyroba01.JPG"
+                                            <img src="./img/elektroinstalace/0.jpg"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
+                                            <img src="./img/elektroinstalace/3.jpg"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
                                         </div>
 
                                         <div class="col-lg-4 mb-4 mb-lg-0">
-                                            <img src="./img/drevovyroba/drevovyroba19.png"
+                                            <img src="./img/elektroinstalace/1.jpg"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
+                                            <img src="./img/elektroinstalace/2.jpg"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
                                         </div>
 
                                         <div class="col-lg-4 mb-4 mb-lg-0">
-                                            <img src="./img/drevovyroba/drevovyroba20.png"
+                                            <img src="./img/elektroinstalace/5.jpg"
+                                                class="w-100 shadow-1-strong rounded mb-4"
+                                                alt="Yosemite National Park" />
+                                            <img src="./img/elektroinstalace/4.jpg"
                                                 class="w-100 shadow-1-strong rounded mb-4"
                                                 alt="Yosemite National Park" />
                                         </div>
                                     </div>
                                     <div class="col text-left">
-                                        <p></p>
+                                        <p>TODO</p>
                                         <ul class="list-inline">
                                             <li>
                                                 <strong>Začali jsme poskytovat:</strong>
