vasek.s_done_house_fix

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 
 
                                 <label class="form-check-label" for="sedlova">
-                                    Sedlová
-                                    <img src="./img/ostatni/sedlova-strecha-model.jpg" style="height: 6rem;"
+                                    Sedlová<br>
+                                    <img src="./img/ostatni/sedlova-strecha-model.jpg" style="height: 9rem;"
                                         alt="Sedlová střecha" />
                                 </label>
                             </div>
@@ -209,9 +209,9 @@
                                     value="pultova">
 
                                 <label class="form-check-label" for="pultova">
-                                    Pultová
+                                    Pultová<br>
 
-                                    <img src="./img/ostatni/pultova-strecha-model.jpg" style="height: 6rem;"
+                                    <img src="./img/ostatni/pultova-strecha-model.jpg" style="height: 9rem;"
                                         alt="Pultová střecha" />
                                 </label>
                             </div>
@@ -220,8 +220,8 @@
                                     value="valbova">
 
                                 <label class="form-check-label" for="valbova">
-                                    Válbová
-                                    <img src="./img/ostatni/valbova-strecha-model.jpg" style="height: 6rem;"
+                                    Válbová<br>
+                                    <img src="./img/ostatni/valbova-strecha-model.jpg" style="height: 9rem;"
                                         alt="Válbová střecha" />
                                 </label>
                             </div>
@@ -231,8 +231,8 @@
 
                                 <label class="form-check-label" for="rovna">
 
-                                    Jiná
-                                    <img src="./img/ostatni/house.png" style="height: 6rem;" alt="Jiný typ střechy" />
+                                    Jiná<br>
+                                    <img src="./img/ostatni/house.png" style="height: 9rem;" alt="Jiný typ střechy" />
                                 </label>
                             </div>
                         </fieldset>
