--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Instalatérství</div>
-                            <div class="portfolio-caption-subheading text-muted">Kvalita na prvním místě</div>
+                            <div class="portfolio-caption-subheading text-muted">Zajistíme teplo a pohodlí ve Vašem
+                                domově.</div>
                         </div>
                     </div>
                 </div>
@@ -142,7 +143,8 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Fotovoltaické instalace</div>
-                            <div class="portfolio-caption-subheading text-muted">Ušetřete za předraženou energii</div>
+                            <div class="portfolio-caption-subheading text-muted">Zajistíme Vám levnější elektřinu než
+                                platíte teď</div>
                         </div>
                     </div>
                 </div>
@@ -564,7 +566,8 @@
                             <div class="modal-body">
                                 <!-- Project details-->
                                 <h2 class="text-uppercase text-center">Instalatérství</h2>
-                                <p class="item-intro text-muted text-center">Kvalita na prvním místě</p>
+                                <p class="item-intro text-muted text-center">Zajistíme teplo a pohodlí ve Vašem domově.
+                                </p>
                                 <!-- Gallery -->
                                 <div class="row">
                                     <div class="col-lg-6 m-0 m-sm-2 row">
@@ -602,7 +605,7 @@
                                         <ul class="list-inline">
                                             <li>
                                                 <strong>Začali jsme poskytovat:</strong>
-                                                1.3.2023
+                                                1. 3. 2023
                                             </li>
                                             <li>
                                                 <strong>Ukončených instalací:</strong>
@@ -641,7 +644,8 @@
                             <div class="modal-body">
                                 <!-- Project details-->
                                 <h2 class="text-uppercase text-center">Fotovoltaické instalace</h2>
-                                <p class="item-intro text-muted text-center">Ušetřete za předraženou energii</p>
+                                <p class="item-intro text-muted text-center">Zajistíme Vám levnější elektřinu než
+                                    platíte teď</p>
                                 <!-- Gallery -->
                                 <div class="row">
                                     <div class="col-lg-6 m-0 m-sm-2 row">
@@ -680,7 +684,7 @@
                                         <ul class="list-inline">
                                             <li>
                                                 <strong>Začali jsme poskytovat:</strong>
-                                                1.2.2023
+                                                1. 2. 2023
                                             </li>
                                             <li>
                                                 <strong>Ukončených projektů:</strong>
@@ -744,11 +748,23 @@
                                         </div>
                                     </div>
                                     <div class="col text-left">
-                                        <p>TODO</p>
+                                        <p>V Adamss Bros. Grouping se specializujeme na poskytování špičkových
+                                            elektroinstalačních služeb pro široké spektrum klientů. Naše služby zahrnují
+                                            návrh, instalaci a údržbu elektrických systémů pro rezidenční, komerční i
+                                            průmyslové objekty. Naši odborníci jsou vyškoleni v nejnovějších
+                                            technologiích a standardech, aby zajistili bezpečnost a efektivitu každého
+                                            projektu.
+                                            <br><br>
+                                            Jsme hrdí na to, že naše odborné znalosti a důvěryhodnost nám umožnily
+                                            spolupracovat i s Ministerstvem obrany. Naše práce pro tuto významnou
+                                            instituci zahrnuje náročné a kriticky důležité elektroinstalační projekty,
+                                            kde je klíčová absolutní spolehlivost a nejvyšší úroveň bezpečnostních
+                                            standardů.
+                                        </p>
                                         <ul class="list-inline">
                                             <li>
                                                 <strong>Začali jsme poskytovat:</strong>
-                                                1.3.2023
+                                                1. 3. 2023
                                             </li>
                                             <li>
                                                 <strong>Ukončených projektů:</strong>
