vasek.s_done_kwes_czech

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="container justify-content-between">
             <div class="">
 
-                <form method="POST" class="kf-form w-75 w-sm-100 m-auto"
+                <form method="POST" lang="cs" class="kf-form w-75 w-sm-100 m-auto"
                     action="https://kwesforms.com/api/f/X1Buj3Nxwa4EIvOWzQMp">
 
                     <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
@@ -319,7 +319,7 @@
     <section class="page-section">
         <div class="container justify-content-between">
 
-            <form method="POST" class="kf-form w-75 w-sm-100 m-auto"
+            <form method="POST" lang="cs" class="kf-form w-75 w-sm-100 m-auto"
                 action="https://kwesforms.com/api/f/4aX3BDnpusiT7VqUdbmy">
                 <h2 class="section-heading text-uppercase">Tepelný kalkulátor</h2>
 
@@ -480,16 +480,16 @@
         <div class="contact1">
             <div class="container-contact1">
                 <form class="contact1-form validate-form kwes-form"
-                    action="https://kwesforms.com/api/foreign/forms/27sLMms0CvTKSz6BVPM9">
+                    action="https://kwesforms.com/api/foreign/forms/27sLMms0CvTKSz6BVPM9" lang="cs">
                     <h2 class="section-heading text-uppercase">Kontaktuje nás</h2>
 
 
                     <div class="wrap-input1 validate-input" data-validate="Jméno je povinné">
-                        <input class="input1" type="text" name="name" placeholder="Jméno">
+                        <input class="input1" type="text" required name="name" placeholder="Jméno">
                         <span class="shadow-input1"></span>
                     </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Zadejte reálný email">
+                    <div class="wrap-input1 validate-input" required data-validate="Zadejte reálný email">
                         <input class="input1" type="text" name="email" placeholder="Email">
                         <span class="shadow-input1"></span>
                     </div>
@@ -501,7 +501,7 @@
 
                     <div class="dropdown">
                         <input class="dropdown-toggle p-3 input1 wrap-input1 validate-input" id="subject_input"
-                            data-bs-toggle="dropdown" aria-expanded="false" placeholder="    Týká se služby?"
+                            data-bs-toggle="dropdown" required aria-expanded="false" placeholder="    Týká se služby?"
                             name="subject">
                         <span class="shadow-input1"></span>
 
@@ -680,7 +680,10 @@
                                     <div class="col text-left">
                                         <p>Jsme odborníci na solární technologie, které přinášejí udržitelnost a úspory
                                             energie. Nabízíme instalaci solárních panelů pro domy a podniky, abychom vám
-                                            pomohli snížit náklady a přispět k ochraně životního prostředí.</p>
+                                            pomohli snížit náklady a přispět k ochraně životního prostředí. Díky mým
+                                            zkušenostem jako lektor a přednášející na vysoké škole přináším do naší
+                                            práce nejnovější poznatky a inovace z oboru, což zaručuje nejvyšší úroveň
+                                            odbornosti a profesionality.</p>
                                         <ul class="list-inline">
                                             <li>
                                                 <strong>Začali jsme poskytovat:</strong>
