--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                     </div>
                     <div class="w-100">
                         <label for="strecha_select" class="form-label h5">Střecha</label>
-                        <fieldset class="mb-3 d-sm-flex" name="solar_typ_strechy" data-kw-group>
-                            <div class="form-check text-center d-flex justify-content-between p-0 m-0">
+                        <fieldset class="mb-3 d-xxl-flex" name="solar_typ_strechy" data-kw-group>
+                            <div class="form-check text-center">
                                 <input class="form-check-input" type="radio" name="solar_typ_strechy" id="sedlova"
                                     value="sedlova" checked>
 
@@ -450,7 +450,7 @@
 
 
     <!-- Comments-->
-    <section class="container" style="padding: 3rem 0;">
+    <section class="container p-5" style="padding: 3rem 0;">
         <div id="disqus_thread"></div>
         <script>
             /**
