--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
 
     <!-- Contact-->
-    <section class="page-section" id="contact">
+    <section id="contact">
         <div class="contact1">
             <div class="container-contact1">
                 <form class="contact1-form validate-form kwes-form"
